TEST_PROGRAMS/INVALID/grady_weber/declarationAfterStatement.min
#Declaration after statement
var x : int;
x = 10;
var y : float;

